<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all"
            android:title="@string/nav_all" />

        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/ic_password"
            android:title="@string/nav_passwords" />

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_card"
            android:title="@string/nav_cards" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note"
            android:title="@string/nav_notes" />

        <item
            android:id="@+id/nav_identities"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_identities" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>