<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/cd_app_logo"
        android:src="@drawable/logo_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorOnPrimary" />

</LinearLayout>